<resources>
	<string name="app_name">Dynamic Soundboard</string>
	<string name="suggested_sound_sheet_name">neue Kategorie</string>
	<string name="suggested_sound_layout_name">neues Abenteuer</string>
	<string name="spinner_content_description_drop_down_arrow">Drop Down Auswahl</string>
	<string name="toast_close_app_on_back_press">Zum Beenden erneut drücken</string>
	<string name="request_permission_title">Berechtigung erforderlich</string>
	<string name="request_permission_read_phone_state_message">Die Berrechtigung den Telefonstatus auszulesen ist erforderlich um laufende Sounds im Falle eines eingehenden Anrufes zu pausieren. Ohne diese Berrechtigung wird auch während eines Anrufes, dass Spielen der Sounds fortgesetzt.</string>
	<string name="request_permission_read_storage_message">Die Berechtigung vom Dateisystem zu lesen ist erforderlich um Sounddateien zum Abspielen zu laden. Die App wird ohne diese Berechtigung beendet.</string>
	<string name="request_permission_write_storage_message">Die Berechtigung auf das Dateisystem zu schreiben wird unter anderem benötigt um die Sound Zusammenstellung abzuspeichern. Die App wird ohne diese Berechtigung beendet.</string>
	<string name="music_service_loading_sound_failed">Eine Sound konnte nicht geladen werden:</string>
	<string name="navigation_drawer_content_description_select_sound_layout">Hier klicken um zu einem anderen Sound Layout zu wechseln</string>
	<string name="navigation_drawer_select_sound_layout">Sound layout wechseln</string>
	<string name="navigation_drawer_content_description_open">Navigation öffnen</string>
	<string name="navigation_drawer_content_description_close">Navigation schließen</string>
	<string name="navigation_drawer_content_description_avatar">App Icon</string>
	<string name="navigation_drawer_add">Hinzufügen</string>
	<string name="navigation_drawer_delete">Löschen</string>
	<string name="navigation_drawer_delete_selected">Alle markierten löschen</string>
	<string name="tab_sound_sheets">Gruppen</string>
	<string name="tab_sound_sheets_content_description_selected">Aktuell geöffnete Sound Kategorie</string>
	<string name="tab_sound_sheets_content_description_delete">Diese Kategorie löschen</string>
	<string name="tab_sound_sheets_sound_count_label">Sounds:</string>
	<string name="tab_play_list">Playliste</string>
	<string name="tab_play_list_content_description_playlist">Sound wird aus der Playliste entfernt</string>
	<string name="action_menu">Sound Layouts öffnen</string>
	<string name="action_add_new_sound_sheet">Eine neue Sound Gruppe hinzufügen</string>
	<string name="action_add_new_sound">Einen neuen Sound hinzufügen</string>
	<string name="action_add_new_sound_from_dir">Alle Sounds aus einem Verzeichniss hinzufügen</string>
	<string name="action_delete_sheet">Diese Kategorie löschen</string>
	<string name="action_clear_sounds_in_sheet">Sounds in dieser Kategorie löschen</string>
	<string name="action_clear_sound_sheets">Alle Kategorien löschen</string>
	<string name="action_clear_play_list">Playliste löschen</string>
	<string name="action_store_sound_sheets">Soundlayout exportieren</string>
	<string name="action_load_sound_sheets">Soundlayout importieren</string>
	<string name="action_preferences">Einstellungen</string>
	<string name="action_about">Über</string>
	<string name="cab_content_description_cancel">Beendet den Löschvorgang. Es werden keine Elemente gelöscht</string>
	<string name="cab_title_delete_sound_sheets">Kategorien zum löschen markieren</string>
	<string name="cab_title_delete_play_list_sounds">Sounds zum löschen markieren</string>
	<string name="cab_title_delete_sound_layouts">Soundlayouts zum löschen markieren</string>
	<string name="sound_control_deletion_pending_single">Sound gelöscht</string>
	<string name="sound_control_deletion_pending">{%s0} Sounds gelöscht</string>
	<string name="sound_control_deletion_pending_undo">Rückgängig machen</string>
	<string name="sound_control_content_description_stop">Setzt den Sound zurück</string>
	<string name="sound_control_content_description_play">Startet oder Pausiert den Sound</string>
	<string name="sound_control_content_description_loop">Sound wird in einer Schleife abgespielt</string>
	<string name="sound_control_content_description_playlist">Sound wird in die Playliste aufgenommen</string>
	<string name="sound_control_content_description_settings">Sound editieren, verschieben, umbenennen</string>
	<string name="sound_control_content_description_reorder">Sound neusortieren</string>
	<string name="sound_control_error_during_playback">Wiedergabe Fehler</string>
	<string name="notification_pause_sound">Sound pausieren</string>
	<string name="notification_stop_sound">Sound stoppen</string>
	<string name="notification_play_sound">Sound abspielen</string>
	<string name="notification_playlist">Playliste</string>
	<string name="introduction_action_icon">Icon der beschriebenen Aktion</string>
	<string name="introduction_action_new_sound_sheet_title">@string/action_add_new_sound_sheet</string>
	<string name="introduction_action_new_sound_sheet_summary">Erstellt eine neue Kategorie für Sounds. Du kannst der
		Kategorie einen namen geben und ihr verschiedene Sounds zuordnen. Über das Menü links kann zwischen den verschiedenen
		Kategrien gewechselt werden.</string>
	<string name="introduction_action_add_new_sound_from_dir_title">@string/action_add_new_sound_from_dir</string>
	<string name="introduction_action_add_new_sound_from_dir_summary">Hiermit kaönnen mehrere Sounds aus einem Verzeichniss der aktuellen
		Kategorie hinzugefügt werden. Wähle dazu ein Verzeichniss das geladen werden soll.</string>
	<string name="introduction_action_add_new_sound_title">@string/action_add_new_sound</string>
	<string name="introduction_action_add_new_sound_summary">Hiermit kannst du einen oder mehrere Sounds auswählen um diese der aktuellen Kategorie
		hinzuzufügen. Für jeden geladenen Sound kannst du einen den angezeigten Namen einstellen.</string>
	<string name="preferences">Einstellungen</string>
	<string name="preferences_enable_notifications_title">Benachrichtigungen aktivieren</string>
	<string name="preferences_enable_notifications_summary">Mit aktivierten Benachrichtigungen können aktive Sounds auch nach dem
		verlassen der App gesteuert werden. Wenn Benachrichtigungen deaktiviert sind, werden alle aktiven Sounds beim Verlassen
		der App beendet</string>
	<string name="preferences_enable_one_swipe_delete_title">Löschen ohne Bestätigung</string>
	<string name="preferences_enable_one_swipe_delete_summary">Mit dieser Option können Sounds ohne eine zweite Bestätigung gelöscht werden.</string>
	<string name="preferences_use_system_file_browser_title">Eigenen Dateibrowser verwenden</string>
	<string name="preferences_use_system_file_browser_summary">Wenn diese Option angeschaltet ist, wird der auf dem Telefon normalerweise installierte Dateibrowser verwendet um einzelne Dateien auszuwählen. 
		Ansonsten wird der Browser der App verwendet (empfohlen).</string>
	<string name="about">Über</string>
	<string name="about_author_title">Autor</string>
	<string name="about_author_summary">Eric Neidhardt</string>
	<string name="about_version_title">Version</string>
	<string name="about_used_third_party_software_title">Verwendete Komponenten</string>
	<string name="about_used_third_party_software_summary">
		ch.acra:acra,
		org.greenrobot:eventbus,
		de.greenrobot:greendao,
		com.fasterxml.jackson.core:jackson-databind,
		com.github.clans:fab,
		com.github.johnkil.android-robototextview:robototextview,
		com.emtronics.dragsortrecycler:DragSortRecycler,
		me.zhanghai.android.materialprogressbar:library,
		jp.wasabeef:recyclerview-animators
	</string>
	<string name="about_used_third_party_assets_title">Verwendete Ressourcen</string>
	<string name="about_used_third_party_assets_summary">
		christos: http://www.oxygenna.com/author/christos,
		Icons8: http://icons8.com,
		300 FREE vector icons by Piotr Kwiatkowski: http://behance.net/piotrkwiatkowski,
		Metrize Icons by Alessio Atzeni: http://alessioatzeni.com/metrize-icons
	</string>
	<string name="dialog_grant">Erlauben</string>
	<string name="dialog_close">Beenden</string>
	<string name="dialog_denial">Verweigern</string>
	<string name="dialog_ok">OK</string>
	<string name="dialog_delete">Löschen</string>
	<string name="dialog_add">Hinzufügen</string>
	<string name="dialog_save">Speichern</string>
	<string name="dialog_cancel">Abbrechen</string>
	<string name="dialog_load">Laden</string>
	<string name="dialog_rename">Umbenennen</string>
	<string name="dialog_confirm_delete_title">Wirklich entfernen?</string>
	<string name="dialog_confirm_delete_soundsheet_message">Soll diese Kategorie entfernt werden?</string>
	<string name="dialog_confirm_delete_sounds_in_soundheet_message">Sollen alle Sounds in dieser Kategorie entfernt werden?</string>
	<string name="dialog_confirm_delete_all_soundsheets_message">Sollen alle Kategorien des Soundboards entfernt werden?</string>
	<string name="dialog_confirm_delete_play_list_message">Soll die aktuelle Playliste gelöscht werden?</string>
	<string name="dialog_add_new_sound_from_directory_title">Verzeichniss auswählen</string>
	<string name="dialog_add_new_sound_from_directory_message">Dem Soundbord werden alle Sounds in dem ausgewählten Verzeichniss hinzugefügt</string>
	<string name="dialog_add_new_sound_from_directory_content_description_file_type">Dateityp</string>
	<string name="dialog_add_new_sound_from_directory_content_description_selection">Ausgewählte Datei</string>
	<string name="dialog_add_new_sound_sheet_title">Name der Sound Liste?</string>
	<string name="dialog_add_new_sound_sheet_message">Dem SoundBoard wird ein neue Gruppe mit diesem Namen hinzugefügt. Der Name kann später noch geändert werden.</string>
	<string name="dialog_add_new_sound_from_intent_title">Sound hinzufügen</string>
	<string name="dialog_add_new_sound_from_intent_message">Es wurden noch keine Kategorien für Sounds angelegt. Soll eine neue Kategorie angelegt werden?</string>
	<string name="dialog_sound_settings_title">Sound editieren</string>
	<string name="dialog_sound_settings_message">Sound umbenennen oder in eine andere Kategorie verschieben?</string>
	<string name="dialog_sound_layout_settings_title">Abenteuer umbenennen</string>
	<string name="dialog_add_new_sound_layout_title">Ein weitere Abenteuer anlegen</string>
	<string name="dialog_add_new_sound_layout_message">Dem SoundBoard wird ein neu neues Abenteuer hinzugefügt. Du kannst zwischen den verschiedenen Abenteuern wechseln.</string>
	<string name="dialog_add_new_sound_from_intent_to_sound_sheet_message">Welcher Kategorie soll der Sound hinzugefügt werden, oder soll eine neue Kategorie angelegt werden?</string>
	<string name="dialog_add_new_sound_from_intent_to_sound_sheet_checkbox">Eine neue Katagorie anlegen</string>
	<string name="dialog_add_new_sound_title">Sound hinzufügen</string>
	<string name="dialog_add_new_sound_message">Mit dem Plus kann ein weiterer Sound ausgewählt werden.</string>
	<string name="dialog_add_new_sound_content_description">Öffnet den Dateibrowser um eine weitern Sound hinzuzufügen.</string>
	<string name="dialog_add_new_sound_toast_no_sounds">Drücke auf Plus um weitere Sounds auszuwählen.</string>
	<string name="dialog_store_layout_message">Eine Datei anlegen oder Auswählen um die aktuelle Sound Zusammenstellung abzuspeichern.</string>
	<string name="dialog_load_layout_message">Eine gespeichtere SoundKonfiguration auswählen um diese zu laden.</string>
	<string name="dialog_rename_sound_file_message">Soll die zugehörige Musikdatei ebenfalls umbenannt werden?</string>
	<string name="dialog_rename_sound_file_current_name">Aktueller Name:</string>
	<string name="dialog_rename_sound_file_new_name">Neuer Name:</string>
	<string name="dialog_rename_sound_file_all_occurrences_message">Sollen alle geladenen Sounds die diese Datei benutzen auch umbenannt werden? ({%s0} Sounds)</string>
</resources>