<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  tools:context=".BaseActivity" >

	<item android:id="@+id/action_delete_sheet"
		  android:title="@string/action_delete_sheet"
		  android:orderInCategory="1"
		  app:showAsAction="never" />

	<item android:id="@+id/action_clear_sounds_in_sheet"
		  android:title="@string/action_clear_sounds_in_sheet"
		  android:orderInCategory="1"
		  app:showAsAction="never" />

	<item android:id="@+id/action_clear_sound_sheets"
		  android:title="@string/action_clear_sound_sheets"
		  android:orderInCategory="1"
		  app:showAsAction="never" />

	<item android:id="@+id/action_clear_play_list"
		  android:title="@string/action_clear_play_list"
		  android:orderInCategory="1"
		  app:showAsAction="never" />

	<item android:id="@+id/action_load_sound_sheets"
		  android:title="@string/action_load_sound_sheets"
		  android:orderInCategory="1"
		  app:showAsAction="never" />

	<item android:id="@+id/action_store_sound_sheets"
		  android:title="@string/action_store_sound_sheets"
		  android:orderInCategory="1"
		  app:showAsAction="never" />

	<item android:id="@+id/action_preferences"
		  android:title="@string/action_preferences"
		  android:orderInCategory="100"
		  app:showAsAction="never" />

	<item android:id="@+id/action_about"
		  android:title="@string/action_about"
		  android:orderInCategory="100"
		  app:showAsAction="never" />

</menu>
