<?xml version="1.0" encoding="utf-8"?>

<org.neidhardt.dynamicsoundboard.views.DialogBaseLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:animateLayoutChanges="true"
		app:has_title="false"
		app:has_recycler_view="true"
		app:text_cancle_button="@string/dialog_cancel"
		app:text_ok_button="@string/dialog_load">

	<com.devspark.robototextview.widget.RobotoTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/text_content_secondary"
			android:textSize="@dimen/text_body"
			android:text="@string/dialog_load_layout_message"
			app:typeface="roboto_medium"/>

</org.neidhardt.dynamicsoundboard.views.DialogBaseLayout>