<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:minWidth="@dimen/width_min_dialog"
			  android:orientation="vertical">

	<com.devspark.robototextview.widget.RobotoTextView
			android:id="@+id/tv_message"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/padding_dialog"
			android:textColor="@color/text_content_secondary"
			android:textSize="@dimen/text_body"
			app:typeface="roboto_medium"
			tools:text="@string/dialog_confirm_delete_all_soundsheets_message"/>

	<org.neidhardt.dynamicsoundboard.views.DialogButtonBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			app:text_cancle_button="@string/dialog_cancel"
			app:text_ok_button="@string/dialog_delete"/>

</LinearLayout>