<?xml version="1.0" encoding="utf-8"?>

<org.neidhardt.dynamicsoundboard.views.DialogBaseLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:has_title="true"
		app:text_cancle_button="@string/dialog_cancel"
		app:text_ok_button="@string/dialog_add">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<com.devspark.robototextview.widget.RobotoTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/text_content_secondary"
				android:textSize="@dimen/text_body"
				android:text="@string/dialog_add_new_sound_sheet_message"
				app:typeface="roboto_medium"/>

		<org.neidhardt.dynamicsoundboard.views.edittext.NoUnderscoreEditText
				android:id="@+id/et_name_new_sound_sheet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_default"/>

	</LinearLayout>


</org.neidhardt.dynamicsoundboard.views.DialogBaseLayout>
