<?xml version="1.0" encoding="utf-8"?>

<org.neidhardt.dynamicsoundboard.views.DialogBaseLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:animateLayoutChanges="true"
		app:has_title="true"
		app:text_cancle_button="@string/dialog_cancel"
		app:text_ok_button="@string/dialog_save">

		<org.neidhardt.dynamicsoundboard.views.edittext.NoUnderscoreEditText
				android:id="@+id/et_name_file"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

		<com.devspark.robototextview.widget.RobotoTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_default"
				android:layout_marginBottom="@dimen/margin_default"
				android:textColor="@color/text_content_secondary"
				android:textSize="@dimen/text_body"
				android:text="@string/dialog_sound_settings_message"
				app:typeface="roboto_medium"/>

		<CheckBox
				android:id="@+id/cb_add_new_sound_sheet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/text_content_secondary"
				android:textSize="@dimen/text_body"
				android:text="@string/dialog_add_new_sound_from_intent_to_sound_sheet_checkbox"
				tools:checked="true"/>

		<org.neidhardt.dynamicsoundboard.views.spinner.CustomSpinner
				android:id="@+id/s_sound_sheets"
				android:layout_width="match_parent"
				android:layout_height="@dimen/height_input_field"/>

		<org.neidhardt.dynamicsoundboard.views.edittext.NoUnderscoreEditText
				android:id="@+id/et_name_new_sound_sheet"
				android:layout_width="match_parent"
				android:layout_height="@dimen/height_input_field"
				android:paddingTop="@dimen/margin_default"/><!-- padding to align view with s_sound_sheets -->


</org.neidhardt.dynamicsoundboard.views.DialogBaseLayout>