<?xml version="1.0" encoding="utf-8"?>

<org.neidhardt.dynamicsoundboard.views.DialogBaseLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:animateLayoutChanges="true"
		app:has_title="false"
		app:has_recycler_view="true"
		app:text_cancle_button="@string/dialog_cancel"
		app:text_ok_button="@string/dialog_save">

	<com.devspark.robototextview.widget.RobotoTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/text_content_secondary"
			android:textSize="@dimen/text_body"
			android:text="@string/dialog_store_layout_message"
			app:typeface="roboto_medium"/>

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<com.devspark.robototextview.widget.RobotoButton
				android:id="@+id/b_add"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/height_dialog_button"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_marginTop="@dimen/margin_default"
				android:padding="@dimen/margin_small"
				android:text="@string/dialog_add"
				android:textSize="@dimen/text_button"
				android:textColor="@color/selector_text_accent"
				android:background="@drawable/selector_background_accent"
				app:typeface="roboto_medium"
				style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

		<com.devspark.robototextview.widget.RobotoEditText
				android:id="@+id/et_name_file"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:textSize="@dimen/text_body"
				android:layout_marginTop="@dimen/margin_default"
				android:layout_marginRight="@dimen/margin_default"
				android:layout_marginEnd="@dimen/margin_default"
				android:layout_toLeftOf="@id/b_add"
				android:layout_toStartOf="@id/b_add"
				app:typeface="roboto_medium"
				tools:text="Neuer Datei Name"/>

	</RelativeLayout>
</org.neidhardt.dynamicsoundboard.views.DialogBaseLayout>