<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:minWidth="@dimen/width_min_dialog"
		android:animateLayoutChanges="true">

	<com.devspark.robototextview.widget.RobotoTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_dialog"
			android:layout_marginBottom="@dimen/padding_dialog"
			android:paddingLeft="@dimen/padding_dialog"
			android:paddingRight="@dimen/padding_dialog"
			android:textColor="@color/text_content_secondary"
			android:textSize="@dimen/text_body"
			android:text="@string/dialog_add_new_sound_layout_message"
			app:typeface="roboto_medium"/>

	<org.neidhardt.dynamicsoundboard.views.edittext.NoUnderscoreEditText
			android:id="@+id/et_name_sound_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_default"
			android:paddingLeft="@dimen/padding_dialog"
			android:paddingRight="@dimen/padding_dialog"/>

	<org.neidhardt.dynamicsoundboard.views.DialogButtonBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			app:text_cancle_button="@string/dialog_cancel"
			app:text_ok_button="@string/dialog_add"/>
</LinearLayout>