<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="@dimen/padding_dialog"
		android:orientation="vertical">

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/dialog_rename_sound_file_message"
			style="@style/style_all_body1"/>

	<CheckBox
			android:id="@+id/cb_dialog_rename_sound_file_layout_rename_all"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_small"
			android:text="@string/dialog_rename_sound_file_all_occurrences_message"
			style="@style/style_all_body1"
			tools:visibility="visible"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_default"
			android:orientation="horizontal">

		<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="2"
				android:gravity="center_vertical"
				android:text="@string/dialog_rename_sound_file_new_name"
				style="@style/style_all_body2"/>

		<TextView
				android:id="@+id/tv_dialog_rename_sound_file_layout_new_name"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="3"
				android:gravity="end|center_vertical"
				android:maxLines="2"
				android:ellipsize="end"
				tools:text="My renamed Music.mp3"
				style="@style/style_all_body2"/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_default"
			android:orientation="horizontal">

		<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="2"
				android:gravity="center_vertical"
				android:text="@string/dialog_rename_sound_file_current_name"
				style="@style/style_all_body2"/>

		<TextView
				android:id="@+id/tv_dialog_rename_sound_file_layout_current_name"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="3"
				android:gravity="end|center_vertical"
				android:maxLines="2"
				android:ellipsize="end"
				tools:text="My Music.mp3"
				style="@style/style_all_body2"/>
	</LinearLayout>

</LinearLayout>