<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="@dimen/height_list_item_xlarge"
		android:background="@color/background">

	<ImageButton
			android:id="@+id/ib_layout_sound_control_play"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_tiny"
			android:layout_marginLeft="@dimen/margin_tiny"
			android:layout_marginTop="@dimen/margin_tiny"
			android:theme="@style/Theme.ImageButton.SoundControl"
			android:contentDescription="@string/sound_control_content_description_play"
			android:src="@drawable/selector_ic_play"/>

	<ImageButton
			android:id="@+id/ib_layout_sound_control_reorder"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_marginTop="@dimen/margin_tiny"
			android:layout_marginRight="@dimen/margin_tiny"
			android:layout_marginEnd="@dimen/margin_tiny"
			android:theme="@style/Theme.ImageButton.SoundControl"
			android:contentDescription="@string/sound_control_content_description_reorder"
			android:src="@drawable/selector_ic_reorder"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_toRightOf="@id/ib_layout_sound_control_play"
			android:layout_toEndOf="@id/ib_layout_sound_control_play"
			android:layout_toLeftOf="@id/ib_layout_sound_control_reorder"
			android:layout_toStartOf="@id/ib_layout_sound_control_reorder"
			android:orientation="vertical">

		<org.neidhardt.dynamicsoundboard.views.edittext.NoUnderscoreEditText
				android:id="@+id/et_layout_sound_control_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_default"
				android:layout_marginLeft="@dimen/margin_default"
				android:layout_marginRight="@dimen/margin_default"
				android:layout_marginEnd="@dimen/margin_default"
				app:text_size="@dimen/text_subheading"
				app:text_color="@color/text_body_primary"/>

		<SeekBar
				android:id="@+id/sb_layout_sound_control_progress"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/margin_default"
				android:layout_marginRight="@dimen/margin_default"
				android:layout_marginEnd="@dimen/margin_default"/>

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginLeft="@dimen/margin_default"
			android:layout_marginStart="@dimen/margin_default"
			android:layout_marginBottom="@dimen/margin_tiny"
			android:layout_toRightOf="@id/b_play"
			android:layout_toEndOf="@id/b_play"
			android:orientation="horizontal">

		<ImageButton
				android:id="@+id/ib_layout_sound_control_stop"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:theme="@style/Theme.ImageButton.SoundControl"
				android:contentDescription="@string/sound_control_content_description_stop"
				android:src="@drawable/selector_ic_stop"/>

		<ImageButton
				android:id="@+id/ib_layout_sound_control_loop"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:theme="@style/Theme.ImageButton.SoundControl"
				android:contentDescription="@string/sound_control_content_description_loop"
				android:src="@drawable/selector_ic_loop"/>

		<ImageButton
				android:id="@+id/ib_layout_sound_control_add_to_playlist"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:theme="@style/Theme.ImageButton.SoundControl"
				android:contentDescription="@string/sound_control_content_description_playlist"
				android:src="@drawable/selector_ic_playlist"/>

		<ImageButton
				android:id="@+id/ib_layout_sound_control_settings"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:theme="@style/Theme.ImageButton.SoundControl"
				android:contentDescription="@string/sound_control_content_description_settings"
				android:src="@drawable/selector_ic_settings"/>

	</LinearLayout>


</RelativeLayout>