<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:background="@color/background">

	<ImageView
			android:id="@+id/iv_introduction_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_default"
			android:layout_centerVertical="true"
			android:contentDescription="@string/introduction_action_icon"
			tools:src="@drawable/ic_new_sound_layout"/>

	<TextView
			android:id="@+id/tv_introduction_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_default"
			android:layout_marginLeft="@dimen/height_list_item_large"
			android:layout_marginStart="@dimen/height_list_item_large"
			android:layout_marginRight="@dimen/margin_default"
			android:layout_marginEnd="@dimen/margin_default"
			android:textSize="@dimen/text_body"
			android:textColor="@color/text_content_primary"
			tools:text="@string/introduction_action_new_sound_sheet_title"/>

	<TextView
			android:id="@+id/tv_introduction_summary"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/tv_introduction_title"
			android:layout_marginLeft="@dimen/height_list_item_large"
			android:layout_marginStart="@dimen/height_list_item_large"
			android:layout_marginRight="@dimen/margin_default"
			android:layout_marginEnd="@dimen/margin_default"
			android:layout_marginBottom="@dimen/margin_default"
			android:textSize="@dimen/text_body"
			android:textColor="@color/text_content_secondary"
			tools:text="@string/introduction_action_new_sound_sheet_summary"/>

</RelativeLayout>